--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
   <body>
     <header class="header">
       <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
-      <nav class="main-nav">Navigation</nav>
+      <nav class="main-nav">
+        <ul class="main-nav-list">
+          <li><a class="main-nav-link" href="#">Section 1</a></li>
+          <li><a class="main-nav-link" href="#">Section 2</a></li>
+          <li><a class="main-nav-link" href="#">Section 3</a></li>
+          <li><a class="main-nav-link" href="#">Section 4</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -47,7 +55,7 @@
                 <img src="img/customers/customer-6.jpg" alt="Customer Photo" />
               </div>
               <p class="delivered-text">
-                <span>250,000+</span>meals last year!
+                <span>250,000+&nbsp</span>meals last year!
               </p>
             </div>
           </div>
