--- a/index.html
+++ b/index.html
@@ -182,24 +182,63 @@
               class="meal-img"
               alt="japanese gyozas"
             />
-            <span class="tag">Vegeterian</span>
-            <p class="meal-title">Japanese Gyozas</p>
-            <ul class="meal-attributes">
-              <li class="meal-attribute">
-                <ion-icon name="flame-outline"></ion-icon
-                ><span> 650 calories</span>
-              </li>
-              <li class="meal-attribute">
-                <ion-icon name="restaurant-outline"></ion-icon
-                ><span> NutriScore &reg; 74</span>
-              </li>
-              <li class="meal-attribute">
-                <ion-icon name="star-outline"></ion-icon
-                ><span> 4.9 rating (537)</span>
-              </li>
-            </ul>
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag">Vegeterian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon
+                  ><span><strong>650</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon
+                  ><span>NutriScore &reg; <strong>75</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon
+                  ><span><strong>4.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
           </div>
-          <div class="meal">Meals</div>
+
+          <!-- MEAL 02 -->
+          <div class="meal">
+            <img
+              src="img/meals/meal-2.jpg"
+              class="meal-img"
+              alt="avocado salad"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag--vegan">Vegan</span>
+                <span class="tag--paleo">Paleo</span>
+              </div>
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon
+                  ><span><strong>400</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon
+                  ><span>NutriScore &reg; <strong>91</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon
+                  ><span><strong>4.7</strong> rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
           <div class="list">List of diets</div>
         </div>
       </section>
