--- a/index.html
+++ b/index.html
@@ -440,6 +440,72 @@
           </figure>
         </div>
       </section>
+
+      <section class="section-pricing">
+        <div class="container">
+          <span class="subheading">Pricing</span>
+          <h2 class="heading-secondary">Eat well without breaking the bank</h2>
+        </div>
+
+        <div class="container grid grid--2-cols">
+          <div class="Pricing Plan">
+            <header class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price">3600 <span>₹</span></p>
+              <p class="plan-text">per-month. That's just 120₹ per month</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>1 meal per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>Order times are between 11am and 9pm</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>Delivery is free</span>
+              </li>
+            </ul>
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full margin-right-sm"
+                >Start eating well</a
+              >
+            </div>
+          </div>
+          <div class="Pricing Plan">
+            <header class="plan-header">
+              <p class="plan-name">Complete</p>
+              <p class="plan-price">8000 <span>₹</span></p>
+              <p class="plan-text">per-month. That's just 133₹ per month</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>2 meal per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>Order 24/7</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
+                <span>Get access to latest recipes</span>
+              </li>
+            </ul>
+            <div class="plan-sign-up">
+              <a href="#" class="btn btn--full margin-right-sm"
+                >Start eating well</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
