--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         </div>
 
         <div class="container grid grid--2-cols">
-          <div class="Pricing Plan">
+          <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price">3600 <span>₹</span></p>
@@ -461,11 +461,15 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Order times are between 11am and 9pm</span>
+                <span>Order from 11am to 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                 <span>Delivery is free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close-outline"></ion-icon>
+                <span>Get access to latest recipes</span>
               </li>
             </ul>
             <div class="plan-sign-up">
@@ -474,7 +478,7 @@
               >
             </div>
           </div>
-          <div class="Pricing Plan">
+          <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price">8000 <span>₹</span></p>
@@ -483,11 +487,11 @@
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>2 meal per day</span>
+                <span><strong>2 meals</strong> per day</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Order 24/7</span>
+                <span>Order <strong>24/7</strong></span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -504,6 +508,13 @@
               >
             </div>
           </div>
+        </div>
+
+        <div class="container grid grid--4-cols">
+          <div class="feature">Feature 1</div>
+          <div class="feature">Feature 2</div>
+          <div class="feature">Feature 3</div>
+          <div class="feature">Feature 4</div>
         </div>
       </section>
     </main>
