--- a/index.html
+++ b/index.html
@@ -556,14 +556,27 @@
       <section class="section-cta">
         <div class="container">
           <div class="cta">
-            <div class="cta-text-box">CTA</div>
+            <div class="cta-text-box">
+              <h2 class="heading-secondary">Get your first meal for free!</h2>
+              <p class="cta-text">
+                Healthy, tasty and hassle-free meals are waiting for you. Start
+                eating well today. You can cancel or pause anytime. And the
+                first meal is on us!
+              </p>
+              <form class="cta-form">
+                <label for="fullname">Full Name</label>
+                <input id="fullname" type="text" placeholder="Kunal Singhdeo" />
+
+                <label for="email">Email</label>
+                <input id="email" type="email" placeholder="me@example.com" />
+                <button class="btn">Sign up now</button>
+              </form>
+            </div>
             <div
               class="cta-img-box"
               role="img"
               aria-label="woman enjoying food"
-            >
-              Image
-            </div>
+            ></div>
           </div>
         </div>
       </section>
