--- a/index.html
+++ b/index.html
@@ -618,13 +618,19 @@
 
           <ul class="social-links">
             <li>
-              <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
             </li>
             <li>
-              <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
             </li>
             <li>
-              <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
             </li>
           </ul>
 
@@ -635,35 +641,37 @@
         <div class="address-col">
           <p class="footer-heading">Contact Us</p>
           <address class="contacts">
-            <p>Address: 623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
-            <a href="tel:7008309174">7008309174</a> <br />
-            <a href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+            <p class="address">Address: HSR Layout, Bangalore, IND 321654</p>
+            <a class="footer-link" href="tel:7008309174">7008309174</a> <br />
+            <a class="footer-link" href="mailto:hello@omnifood.com"
+              >hello@omnifood.com</a
+            >
           </address>
         </div>
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
-            <li><a href="#">Create Account</a></li>
-            <li><a href="#">Sign in</a></li>
-            <li><a href="#"> IOS App</a></li>
-            <li><a href="#">Android App</a></li>
+            <li><a class="footer-link" href="#">Create Account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#"> IOS App</a></li>
+            <li><a class="footer-link" href="#">Android App</a></li>
           </ul>
         </nav>
         <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
-            <li><a href="#"> About Omnifood</a></li>
-            <li><a href="#">For Business</a></li>
-            <li><a href="#">Cooking partners</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a class="footer-link" href="#"> About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
           </ul>
         </nav>
         <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
-            <li><a href="#">Recipe directory</a></li>
-            <li><a href="#">Help center</a></li>
-            <li><a href="#">Privacy & terms</a></li>
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
           </ul>
         </nav>
       </div>
